# archdoc

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  README.md  archdoc.yml  docker-compose.yml
.github/workflows/: main.yml
archdoc/: LICENSE  NOTICE  README.md  pyproject.toml
archdoc/src/archdoc/: cli.py  schema_exporter.py
archdoc/src/archdoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
archdoc/src/archdoc/catalog/: id_resolver.py  identity.py  models.py  writer.py
archdoc/src/archdoc/config/: initializer.py  loader.py  models.py
archdoc/src/archdoc/exporter/: docusaurus_exporter.py
archdoc/src/archdoc/facts/: loader.py  models.py  writer.py
archdoc/src/archdoc/linker/: endpoint_service_linker.py  mark_linked_endpoint_implementations.py
archdoc/src/archdoc/mapper/: action_mapper.py  endpoint_mapper.py  operation_link_mapper.py  service_mapper.py
archdoc/src/archdoc/overlay/: __init__.py  loader.py  models.py  writer.py
archdoc/src/archdoc/scanner/: ast_utils.py  python_scanner.py
archdoc/src/archdoc/templates/: __init__.py  archdoc.example.yml
archdoc/src/archdoc/utils/: class_index.py
archdoc/src/archdoc/validator/: catalog_validator.py  class_resource_profile.py  models.py  writer.py
archdoc/tests/: README.md  conftest.py  test_archdoc_pipeline.py  test_config_initializer.py  test_python_scanner.py
docker/: Caddyfile.example  nginx.conf
docs/: setup.md  todo.md
docs/architecture/: FINANCE_STORIES_UPDATE_SUMMARY.md  README.md  US-FIN-016_participant_payout_experience.md  high-level-overview.de.md  high-level-overview.md
site/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
ui_backend/: README.md  __init__.py  requirements.txt
(+137 files in other folders)
