[project]
name = "archdoc"
version = "0.1.0"
description = "Deterministic architecture fact extraction and mapping for Python backends"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "typer>=0.12.0"
]

[project.scripts]
archdoc = "archdoc.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]